:pencil2: Fixed text alignment

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -13,11 +13,11 @@ body {
 
         div img{
             padding-left: 2em;
-            width: 120px;
+            width: 100px;
             height: auto;
         }
         #buttons{
-            padding-top: 50px;
+            padding-top: 35px;
 			padding-left: 50em;
         }
         button{
@@ -86,11 +86,11 @@ body {
 			{
 				font-family: 'Jacques Francois', sans-serif;
 				text-align: center;
-				font-size: 7.5rem;
+				font-size: 2.5em;
 			}
 			hr
 			{
-				width: 80%;
+				width: 60%;
 				height: 5px;
 				border: none;
 				background: white;
@@ -99,7 +99,8 @@ body {
 			p 
 			{
 				font-family: 'Jacques Francois', sans-serif;
-				font-size: 2.5em;
+				font-size: 1.5em;
+                width: 40em;
 			}
         }
     }
